facility functionality and tests for: packageSize, Product, Campaign, Draft, PerformedCultivationAction entities. TODO: other entities + reports + tests (atm hardcoded Joroinen facility)