@@ -77,135 +77,135 @@ public class V1RESTService extends AbstractApi implements V1Api {
   private static final String FAILED_TO_READ_EVENT_DATA = "Failed to read event data";
 
   @Inject
-  private CampaignTranslator campaignTranslator;
+  CampaignTranslator campaignTranslator;
 
   @Inject
-  private CampaignController campaignController;
+  CampaignController campaignController;
 
   @Inject
-  private Logger logger;
+  Logger logger;
 
   @Inject
-  private SeedsController seedsController;
+  SeedsController seedsController;
 
   @Inject
-  private SeedsTranslator seedsTranslator;
+  SeedsTranslator seedsTranslator;
 
   @Inject
-  private WastageReasonsController wastageReasonsController;
+  WastageReasonsController wastageReasonsController;
 
   @Inject
-  private WastageReasonsTranslator wastageReasonsTranslator;
+  WastageReasonsTranslator wastageReasonsTranslator;
 
   @Inject
-  private SeedBatchesController seedBatchController;
+  SeedBatchesController seedBatchController;
 
   @Inject
-  private SeedBatchTranslator seedBatchesTranslator;
+  SeedBatchTranslator seedBatchesTranslator;
 
   @Inject
-  private PackageSizeTranslator packageSizeTranslator;
+  PackageSizeTranslator packageSizeTranslator;
 
   @Inject
-  private PackageSizeController packageSizeController;
+  PackageSizeController packageSizeController;
 
   @Inject
-  private ProductController productController;
+  ProductController productController;
 
   @Inject
-  private ProductsTranslator productsTranslator;
+  ProductsTranslator productsTranslator;
 
   @Inject
-  private ProductionLineController productionLineController;
+  ProductionLineController productionLineController;
 
   @Inject
-  private PerformedCultivationActionTranslator performedCultivationActionTranslator;
+  PerformedCultivationActionTranslator performedCultivationActionTranslator;
 
   @Inject
-  private PerformedCultivationActionsController performedCultivationActionsController;
+  PerformedCultivationActionsController performedCultivationActionsController;
 
   @Inject
-  private PestsController pestsController;
+  PestsController pestsController;
 
   @Inject
-  private PestsTranslator pestsTranslator;
+  PestsTranslator pestsTranslator;
 
   @Inject
-  private ProductionLineTranslator productionLineTranslator;
+  ProductionLineTranslator productionLineTranslator;
 
   @Inject
-  private SowingEventTranslator sowingEventTranslator;
+  SowingEventTranslator sowingEventTranslator;
 
   @Inject
-  private SowingEventController sowingEventController;
+  SowingEventController sowingEventController;
 
   @Inject
-  private TableSpreadEventController tableSpreadEventController;
+  TableSpreadEventController tableSpreadEventController;
 
   @Inject
-  private TableSpreadEventTranslator tableSpreadEventTranslator;
+  TableSpreadEventTranslator tableSpreadEventTranslator;
 
   @Inject
-  private EventController eventController;
+  EventController eventController;
 
   @Inject
-  private CultivationObservationEventController cultivationObservationEventController;
+  CultivationObservationEventController cultivationObservationEventController;
 
   @Inject
-  private CultivationObservationEventTranslator cultivationObservationEventTranslator;
+  CultivationObservationEventTranslator cultivationObservationEventTranslator;
 
   @Inject
-  private HarvestEventController harvestEventController;
+  HarvestEventController harvestEventController;
 
   @Inject
-  private HarvestEventTranslator harvestEventTranslator;
+  HarvestEventTranslator harvestEventTranslator;
 
   @Inject
-  private PlantingEventController plantingEventController;
+  PlantingEventController plantingEventController;
 
   @Inject
-  private PlantingEventTranslator plantingEventTranslator;
+  PlantingEventTranslator plantingEventTranslator;
 
   @Inject
-  private WastageEventController wastageEventController;
+  WastageEventController wastageEventController;
 
   @Inject
-  private WastageEventTranslator wastageEventTranslator;
+  WastageEventTranslator wastageEventTranslator;
 
   @Inject
-  private ReportController reportController;
+  ReportController reportController;
 
   @Inject
-  private DraftController draftController;
+  DraftController draftController;
 
   @Inject
-  private DraftTranslator draftTranslator;
+  DraftTranslator draftTranslator;
   
   @Inject
-  private PackingController packingController;
+  PackingController packingController;
   
   @Inject
-  private PackingTranslator packingTranslator;
+  PackingTranslator packingTranslator;
 
   @Inject
-  private PrintingController printingController;
+  PrintingController printingController;
 
   @Inject
-  private CutPackingController cutPackingController;
+  CutPackingController cutPackingController;
 
   @Inject
-  private CutPackingTranslator cutPackingTranslator;
+  CutPackingTranslator cutPackingTranslator;
 
   @Inject
-  private StorageDiscardController storageDiscardController;
+  StorageDiscardController storageDiscardController;
 
   @Inject
-  private StorageDiscardTranslator storageDiscardTranslator;
+  StorageDiscardTranslator storageDiscardTranslator;
 
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
   @Transactional
-  public Response createPacking(Packing body) {
+  public Response createPacking(Packing body, Facility facility) {
     PackingType packingType = body.getType();
 
     UUID productId = body.getProductId();
@@ -247,7 +247,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
   @Transactional
-  public Response deletePacking(UUID packingId) {
+  public Response deletePacking(Facility facility, UUID packingId) {
     fi.metatavu.famifarm.persistence.model.Packing packing = packingController.findById(packingId);
     
     if (packing == null) {
@@ -260,7 +260,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
-  public Response findPacking(UUID packingId) {
+  public Response findPacking(Facility facility, UUID packingId) {
     fi.metatavu.famifarm.persistence.model.Packing packing = packingController.findById(packingId);
     
     if (packing == null) {
@@ -272,7 +272,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
-  public Response listPackings(Integer firstResult, Integer maxResults, UUID productId, UUID campaingId, PackingState status,
+  public Response listPackings(Facility facility, Integer firstResult, Integer maxResults, UUID productId, UUID campaingId, PackingState status,
       String createdBefore, String createdAfter) {
     fi.metatavu.famifarm.persistence.model.Product product = null;
     fi.metatavu.famifarm.persistence.model.Campaign campaign = null;
@@ -307,7 +307,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
   @Transactional
-  public Response updatePacking(Packing body, UUID packingId) {
+  public Response updatePacking(Packing body, Facility facility, UUID packingId) {
     fi.metatavu.famifarm.persistence.model.Packing packing = packingController.findById(packingId);
 
     if (packing == null) {
@@ -353,7 +353,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response createSeed(Seed body) {
+  public Response createSeed(Seed body, Facility facility) {
     LocalizedEntry name = createLocalizedEntry(body.getName());
     UUID loggerUserId = getLoggerUserId();
 
@@ -363,7 +363,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response deleteSeed(UUID seedId) {
+  public Response deleteSeed(Facility facility, UUID seedId) {
     fi.metatavu.famifarm.persistence.model.Seed seed = seedsController.findSeed(seedId);
     if (seed == null) {
       return createNotFound(NOT_FOUND_MESSAGE);
@@ -376,7 +376,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
-  public Response findSeed(UUID seedId) {
+  public Response findSeed(Facility facility, UUID seedId) {
     fi.metatavu.famifarm.persistence.model.Seed seed = seedsController.findSeed(seedId);
     if (seed == null) {
       return createNotFound(NOT_FOUND_MESSAGE);
@@ -387,7 +387,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
-  public Response listSeeds(Integer firstResult, Integer maxResults) {
+  public Response listSeeds(Facility facility, Integer firstResult, Integer maxResults) {
     List<Seed> result = seedsController.listSeeds(firstResult, maxResults).stream().map(seedsTranslator::translateSeed)
         .collect(Collectors.toList());
 
@@ -396,7 +396,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
-  public Response listStorageDiscards(Integer firstResult, Integer maxResults, String fromTime, String toTime, UUID productId) {
+  public Response listStorageDiscards(Facility facility, Integer firstResult, Integer maxResults, String fromTime, String toTime, UUID productId) {
     fi.metatavu.famifarm.persistence.model.Product product = productId != null ? productController.findProduct(productId) : null;
 
     OffsetDateTime createdAfterTime;
@@ -423,7 +423,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response updateSeed(Seed body, UUID seedId) {
+  public Response updateSeed(Seed body, Facility facility, UUID seedId) {
     fi.metatavu.famifarm.persistence.model.Seed seed = seedsController.findSeed(seedId);
     if (seed == null) {
       return createNotFound(NOT_FOUND_MESSAGE);
@@ -438,11 +438,11 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response createCampaign(@Valid Campaign campaign) {
+  public Response createCampaign(@Valid Campaign campaign, Facility facility) {
     HashMap<fi.metatavu.famifarm.persistence.model.Product, Integer> campaignProductsToCreate = new HashMap<>();
-    List<CampaignProducts> restCampaignProducts = campaign.getProducts();
+    List<CampaignProduct> restCampaignProducts = campaign.getProducts();
 
-    for (CampaignProducts campaignProduct : restCampaignProducts) {
+    for (CampaignProduct campaignProduct : restCampaignProducts) {
       fi.metatavu.famifarm.persistence.model.Product product = productController.findProduct(campaignProduct.getProductId());
       if (product == null) {
         return createNotFound(String.format("Campaign product %s not found!", campaignProduct.getProductId()));
@@ -451,14 +451,14 @@ public class V1RESTService extends AbstractApi implements V1Api {
       campaignProductsToCreate.put(product, campaignProduct.getCount());
     }
 
-    fi.metatavu.famifarm.persistence.model.Campaign createdCampaign = campaignController.create(campaign.getName(), campaignProductsToCreate, getLoggerUserId());
+    fi.metatavu.famifarm.persistence.model.Campaign createdCampaign = campaignController.create(campaign.getName(), campaignProductsToCreate, facility, getLoggerUserId());
     return createOk(campaignTranslator.translate(createdCampaign));
   }
 
   @Override
   @RolesAllowed({ Roles.WORKER, Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response createCutPacking(@Valid CutPacking cutPacking) {
+  public Response createCutPacking(@Valid CutPacking cutPacking, Facility facility) {
     try {
       fi.metatavu.famifarm.persistence.model.CutPacking createdCutPacking = cutPackingController.create(
               cutPacking.getProductId(),
@@ -485,7 +485,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.WORKER, Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response createEvent(Event body) {
+  public Response createEvent(Event body, Facility facility) {
 
     fi.metatavu.famifarm.persistence.model.Product product = productController.findProduct(body.getProductId());
     if (product == null) {
@@ -517,34 +517,34 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response createPackageSize(PackageSize body) {
+  public Response createPackageSize(PackageSize body, Facility facility) {
     LocalizedEntry name = createLocalizedEntry(body.getName());
     Integer size = body.getSize();
     return createOk(packageSizeTranslator
-        .translatePackageSize(packageSizeController.createPackageSize(name, size, getLoggerUserId())));
+        .translatePackageSize(packageSizeController.createPackageSize(name, size, facility, getLoggerUserId())));
   }
 
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response createPerformedCultivationAction(PerformedCultivationAction body) {
+  public Response createPerformedCultivationAction(PerformedCultivationAction body, Facility facility) {
     LocalizedEntry name = createLocalizedEntry(body.getName());
     UUID loggerUserId = getLoggerUserId();
 
     return createOk(performedCultivationActionTranslator.translatePerformedCultivationAction(
-        performedCultivationActionsController.createPerformedCultivationAction(name, loggerUserId)));
+        performedCultivationActionsController.createPerformedCultivationAction(name, facility, loggerUserId)));
   }
 
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response createProduct(Product body) {
+  public Response createProduct(Product body, Facility facility) {
     List<fi.metatavu.famifarm.persistence.model.PackageSize> packageSizes = new ArrayList<>();
 
     if (body.getDefaultPackageSizeIds() != null) {
       body.getDefaultPackageSizeIds().forEach(uuid -> {
         fi.metatavu.famifarm.persistence.model.PackageSize packageSize = packageSizeController.findPackageSize(uuid);
-        if (packageSize != null)
+        if (packageSize != null && packageSize.getFacility() == facility)
           packageSizes.add(packageSize);
       });
     }
@@ -555,6 +555,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
       packageSizes,
       body.getIsSubcontractorProduct(),
       body.getActive(),
+      facility,
       getLoggerUserId()
     );
     if (body.getAllowedHarvestTypes() != null) {
@@ -569,7 +570,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response createProductionLine(ProductionLine body) {
+  public Response createProductionLine(ProductionLine body, Facility facility) {
     String lineNumber = body.getLineNumber();
     Integer defaultGutterHoleCount = body.getDefaultGutterHoleCount();
 
@@ -580,7 +581,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response createSeedBatch(SeedBatch body) {
+  public Response createSeedBatch(SeedBatch body, Facility facility) {
     String code = body.getCode();
     UUID seedId = body.getSeedId();
     OffsetDateTime time = body.getTime();
@@ -597,7 +598,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.WORKER, Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response createStorageDiscard(StorageDiscard payload) {
+  public Response createStorageDiscard(StorageDiscard payload, Facility facility) {
     UUID loggerUserId = getLoggerUserId();
     fi.metatavu.famifarm.persistence.model.Product foundProduct = productController.findProduct(payload.getProductId());
 
@@ -622,7 +623,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response createWastageReason(WastageReason body) {
+  public Response createWastageReason(WastageReason body, Facility facility) {
     LocalizedEntry reason = createLocalizedEntry(body.getReason());
     UUID loggerUserId = getLoggerUserId();
 
@@ -633,9 +634,9 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response deleteCampaign(UUID campaignId) {
+  public Response deleteCampaign(Facility facility, UUID campaignId) {
     fi.metatavu.famifarm.persistence.model.Campaign campaign = campaignController.find(campaignId);
-    if (campaign == null) {
+    if (campaign == null || campaign.getFacility() != facility) {
       return createNotFound(String.format("Campaign %s not found!", campaignId));
     }
 
@@ -646,7 +647,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
   @Transactional
-  public Response deleteCutPacking(UUID cutPackingId) {
+  public Response deleteCutPacking(Facility facility, UUID cutPackingId) {
     fi.metatavu.famifarm.persistence.model.CutPacking existingCutPacking = cutPackingController.find(cutPackingId);
 
     if (existingCutPacking == null) {
@@ -661,7 +662,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
   @Transactional
-  public Response deleteEvent(UUID eventId) {
+  public Response deleteEvent(Facility facility, UUID eventId) {
     fi.metatavu.famifarm.persistence.model.Event event = eventController.findEventById(eventId);
     if (event == null) {
       return createNotFound(String.format("Could not find event %s", eventId));
@@ -674,11 +675,11 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response deletePackageSize(UUID packageSizeId) {
+  public Response deletePackageSize(Facility facility, UUID packageSizeId) {
     fi.metatavu.famifarm.persistence.model.PackageSize packageSize = packageSizeController
         .findPackageSize(packageSizeId);
-    if (packageSize == null) {
-      createNotFound("Package size not found");
+    if (packageSize == null || packageSize.getFacility() != facility) {
+      return createNotFound("Package size not found");
     }
 
     packageSizeController.deletePackageSize(packageSize);
@@ -689,10 +690,10 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response deletePerformedCultivationAction(UUID performedCultivationActionId) {
+  public Response deletePerformedCultivationAction(Facility facility, UUID performedCultivationActionId) {
     fi.metatavu.famifarm.persistence.model.PerformedCultivationAction performedCultivationAction = performedCultivationActionsController
         .findPerformedCultivationAction(performedCultivationActionId);
-    if (performedCultivationAction == null) {
+    if (performedCultivationAction == null || performedCultivationAction.getFacility() != facility) {
       return createNotFound(NOT_FOUND_MESSAGE);
     }
 
@@ -704,14 +705,14 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response deleteProduct(UUID productId) {
+  public Response deleteProduct(Facility facility, UUID productId) {
     fi.metatavu.famifarm.persistence.model.Product product = productController.findProduct(productId);
-    if (product == null) {
+    if (product == null || product.getFacility() != facility) {
       return createNotFound("Product not found");
     }
     
     for (fi.metatavu.famifarm.persistence.model.Packing packing : packingController.listPackings(null, null, null, null, null, null, null)) {
-      if (packing.getProduct().getId() == productId) {
+      if (packing.getProduct() != null && packing.getProduct().getId() == productId) {
         return createBadRequest("Product can not be deleted, because it is linked to packings");
       }
     }
@@ -724,7 +725,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response deleteProductionLine(UUID productionLineId) {
+  public Response deleteProductionLine(Facility facility, UUID productionLineId) {
     fi.metatavu.famifarm.persistence.model.ProductionLine productionLine = productionLineController
         .findProductionLine(productionLineId);
     if (productionLine == null) {
@@ -739,7 +740,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response deleteSeedBatch(UUID seedBatchId) {
+  public Response deleteSeedBatch(Facility facility, UUID seedBatchId) {
     fi.metatavu.famifarm.persistence.model.SeedBatch seedBatch = seedBatchController.findSeedBatch(seedBatchId);
     if (seedBatch == null) {
       return createNotFound(NOT_FOUND_MESSAGE);
@@ -752,7 +753,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @Transactional
-  public Response deleteStorageDiscard(UUID storageDiscardId) {
+  public Response deleteStorageDiscard(Facility facility, UUID storageDiscardId) {
     fi.metatavu.famifarm.persistence.model.StorageDiscard storageDiscard = storageDiscardController.findById(storageDiscardId);
 
     if (storageDiscard == null) {
@@ -766,7 +767,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response deleteWastageReason(UUID wastageReasonId) {
+  public Response deleteWastageReason(Facility facility, UUID wastageReasonId) {
     fi.metatavu.famifarm.persistence.model.WastageReason wastageReason = wastageReasonsController
         .findWastageReason(wastageReasonId);
     if (wastageReason == null) {
@@ -780,10 +781,10 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
-  public Response findCampaign(UUID campaignId) {
+  public Response findCampaign(Facility facility, UUID campaignId) {
     fi.metatavu.famifarm.persistence.model.Campaign campaign = campaignController.find(campaignId);
 
-    if (campaign == null) {
+    if (campaign == null || campaign.getFacility() != facility) {
       return createNotFound(String.format("Campaign %s not found!", campaignId));
     }
 
@@ -792,7 +793,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
-  public Response findCutPacking(UUID cutPackingId) {
+  public Response findCutPacking(Facility facility, UUID cutPackingId) {
     fi.metatavu.famifarm.persistence.model.CutPacking foundCutPacking = cutPackingController.find(cutPackingId);
 
     if (foundCutPacking == null) {
@@ -805,7 +806,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.WORKER, Roles.ADMIN, Roles.MANAGER })
-  public Response findEvent(UUID eventId) {
+  public Response findEvent(Facility facility, UUID eventId) {
     fi.metatavu.famifarm.persistence.model.Event event = eventController.findEventById(eventId);
     if (event == null) {
       return createNotFound(String.format("Could not find event %s", eventId));
@@ -816,10 +817,10 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.WORKER, Roles.ADMIN, Roles.MANAGER })
-  public Response findPackageSize(UUID packageSizeId) {
+  public Response findPackageSize(Facility facility, UUID packageSizeId) {
     fi.metatavu.famifarm.persistence.model.PackageSize packageSize = packageSizeController
         .findPackageSize(packageSizeId);
-    if (packageSize == null) {
+    if (packageSize == null || facility != packageSize.getFacility()) {
       return createNotFound(NOT_FOUND_MESSAGE);
     }
 
@@ -828,10 +829,10 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.WORKER, Roles.ADMIN, Roles.MANAGER })
-  public Response findPerformedCultivationAction(UUID performedCultivationActionId) {
+  public Response findPerformedCultivationAction(Facility facility, UUID performedCultivationActionId) {
     fi.metatavu.famifarm.persistence.model.PerformedCultivationAction performedCultivationAction = performedCultivationActionsController
         .findPerformedCultivationAction(performedCultivationActionId);
-    if (performedCultivationAction == null) {
+    if (performedCultivationAction == null || performedCultivationAction.getFacility() != facility) {
       return createNotFound(NOT_FOUND_MESSAGE);
     }
 
@@ -841,9 +842,9 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.WORKER, Roles.ADMIN, Roles.MANAGER })
-  public Response findProduct(UUID productId) {
+  public Response findProduct(Facility facility, UUID productId) {
     fi.metatavu.famifarm.persistence.model.Product product = productController.findProduct(productId);
-    if (product == null) {
+    if (product == null || product.getFacility() != facility) {
       return createNotFound(NOT_FOUND_MESSAGE);
     }
 
@@ -852,7 +853,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.WORKER, Roles.ADMIN, Roles.MANAGER })
-  public Response findProductionLine(UUID productionLineId) {
+  public Response findProductionLine(Facility facility, UUID productionLineId) {
     fi.metatavu.famifarm.persistence.model.ProductionLine productionLine = productionLineController
         .findProductionLine(productionLineId);
     if (productionLine == null) {
@@ -864,7 +865,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.WORKER, Roles.ADMIN, Roles.MANAGER })
-  public Response findSeedBatch(UUID seedBatchId) {
+  public Response findSeedBatch(Facility facility, UUID seedBatchId) {
     fi.metatavu.famifarm.persistence.model.SeedBatch seedBatch = seedBatchController.findSeedBatch(seedBatchId);
     if (seedBatch == null) {
       return createNotFound(NOT_FOUND_MESSAGE);
@@ -875,7 +876,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
-  public Response findWastageReason(UUID wastageReasonId) {
+  public Response findWastageReason(Facility facility, UUID wastageReasonId) {
     fi.metatavu.famifarm.persistence.model.WastageReason wastageReason = wastageReasonsController
         .findWastageReason(wastageReasonId);
     if (wastageReason == null) {
@@ -887,14 +888,14 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
-  public Response listCampaigns() {
-    List<Campaign> translatedCampaigns = campaignController.list().stream().map(campaignTranslator::translate).collect(Collectors.toList());
+  public Response listCampaigns(Facility facility) {
+    List<Campaign> translatedCampaigns = campaignController.list(facility).stream().map(campaignTranslator::translate).collect(Collectors.toList());
     return createOk(translatedCampaigns);
   }
 
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
-  public Response listCutPackings(Integer firstResult, Integer maxResults, UUID productId, String createdBeforeString, String createdAfterString) {
+  public Response listCutPackings(Facility facility, Integer firstResult, Integer maxResults, UUID productId, String createdBeforeString, String createdAfterString) {
     fi.metatavu.famifarm.persistence.model.Product productToFilterBy = null;
 
     if (productId != null) {
@@ -924,7 +925,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.WORKER, Roles.ADMIN, Roles.MANAGER })
-  public Response listEvents(Integer firstResult, Integer maxResults, UUID productId, String createdAfter,
+  public Response listEvents(Facility facility, Integer firstResult, Integer maxResults, UUID productId, String createdAfter,
   String createdBefore, EventType eventType) {
     fi.metatavu.famifarm.persistence.model.Product product = productId != null ? productController.findProduct(productId) : null;
 
@@ -940,8 +941,8 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.WORKER, Roles.ADMIN, Roles.MANAGER })
-  public Response listPackageSizes(Integer firstResult, Integer maxResults) {
-    List<PackageSize> result = packageSizeController.listPackageSizes(firstResult, maxResults).stream()
+  public Response listPackageSizes(Facility facility, Integer firstResult, Integer maxResults) {
+    List<PackageSize> result = packageSizeController.listPackageSizes(facility, firstResult, maxResults).stream()
         .map(packageSizeTranslator::translatePackageSize).collect(Collectors.toList());
 
     return createOk(result);
@@ -949,9 +950,9 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.WORKER, Roles.ADMIN, Roles.MANAGER })
-  public Response listPerformedCultivationActions(Integer firstResult, Integer maxResults) {
+  public Response listPerformedCultivationActions(Facility facility, Integer firstResult, Integer maxResults) {
     List<PerformedCultivationAction> result = performedCultivationActionsController
-        .listPerformedCultivationActions(firstResult, maxResults).stream()
+        .listPerformedCultivationActions(facility, firstResult, maxResults).stream()
         .map(performedCultivationActionTranslator::translatePerformedCultivationAction).collect(Collectors.toList());
 
     return createOk(result);
@@ -959,7 +960,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.WORKER, Roles.ADMIN, Roles.MANAGER })
-  public Response listProductionLines(Integer firstResult, Integer maxResults) {
+  public Response listProductionLines(Facility facility, Integer firstResult, Integer maxResults) {
     List<ProductionLine> result = productionLineController.listProductionLines(firstResult, maxResults).stream()
         .map(productionLineTranslator::translateProductionLine).collect(Collectors.toList());
 
@@ -968,8 +969,8 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.WORKER, Roles.ADMIN, Roles.MANAGER })
-  public Response listProducts(Integer firstResult, Integer maxResults, Boolean includeInActiveProducts, Boolean includeSubcontractorProducts) {
-    List<Product> result = productController.listProducts(firstResult, maxResults, includeSubcontractorProducts, includeInActiveProducts).stream()
+  public Response listProducts(Facility facility, Integer firstResult, Integer maxResults, Boolean includeInActiveProducts, Boolean includeSubcontractorProducts) {
+    List<Product> result = productController.listProducts(facility, firstResult, maxResults, includeSubcontractorProducts, includeInActiveProducts).stream()
         .map(productsTranslator::translateProduct).collect(Collectors.toList());
 
     return createOk(result);
@@ -977,7 +978,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
-  public Response listSeedBatches(Integer firstResult, Integer maxResults, Boolean isPassive) {
+  public Response listSeedBatches(Facility facility, Integer firstResult, Integer maxResults, Boolean isPassive) {
     Boolean active = null;
     if (isPassive != null) {
       active = !isPassive;
@@ -990,7 +991,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
-  public Response listWastageReasons(Integer firstResult, Integer maxResults) {
+  public Response listWastageReasons(Facility facility, Integer firstResult, Integer maxResults) {
     List<WastageReason> result = wastageReasonsController.listWastageReasons(firstResult, maxResults).stream()
         .map(wastageReasonsTranslator::translateWastageReason).collect(Collectors.toList());
 
@@ -999,7 +1000,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.WORKER, Roles.ADMIN, Roles.MANAGER })
-  public Response print(@Valid PrintData printData, String printerId) {
+  public Response print(@Valid PrintData printData, Facility facility, String printerId) {
     UUID packingId = printData.getPackingId();
     fi.metatavu.famifarm.persistence.model.Packing packing = packingController.findById(packingId);
     fi.metatavu.famifarm.persistence.model.CutPacking cutPacking = cutPackingController.find(packingId);
@@ -1044,22 +1045,22 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response updateCampaign(@Valid Campaign campaign, UUID campaignId) {
+  public Response updateCampaign(@Valid Campaign campaign, Facility facility, UUID campaignId) {
     HashMap<fi.metatavu.famifarm.persistence.model.Product, Integer> campaignProductsToCreate = new HashMap<>();
-    List<CampaignProducts> restCampaignProducts = campaign.getProducts();
+    List<CampaignProduct> restCampaignProducts = campaign.getProducts();
 
-    for (CampaignProducts campaignProduct : restCampaignProducts) {
+    fi.metatavu.famifarm.persistence.model.Campaign campaignToUpdate = campaignController.find(campaignId);
+    if (campaignToUpdate == null || campaignToUpdate.getFacility() != facility) {
+      return createNotFound(String.format("Campaign %s not found!", campaignId));
+    }
+
+    for (CampaignProduct campaignProduct : restCampaignProducts) {
       fi.metatavu.famifarm.persistence.model.Product product = productController.findProduct(campaignProduct.getProductId());
       if (product == null) {
         return createNotFound(String.format("Campaign product %s not found!", campaignProduct.getProductId()));
       }
 
       campaignProductsToCreate.put(product, campaignProduct.getCount());
-    }
-
-    fi.metatavu.famifarm.persistence.model.Campaign campaignToUpdate = campaignController.find(campaignId);
-    if (campaignToUpdate == null) {
-      return createNotFound(String.format("Campaign %s not found!", campaignId));
     }
 
     fi.metatavu.famifarm.persistence.model.Campaign updatedCampaign = campaignController.update(campaignToUpdate, campaign.getName(), campaignProductsToCreate, getLoggerUserId());
@@ -1069,7 +1070,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
   @Transactional
-  public Response updateCutPacking(@Valid CutPacking cutPacking, UUID cutPackingId) {
+  public Response updateCutPacking(@Valid CutPacking cutPacking, Facility facility, UUID cutPackingId) {
     fi.metatavu.famifarm.persistence.model.CutPacking existingCutPacking = cutPackingController.find(cutPackingId);
 
     if (existingCutPacking == null) {
@@ -1103,7 +1104,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.WORKER, Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response updateEvent(Event body, UUID eventId) {
+  public Response updateEvent(Event body, Facility facility, UUID eventId) {
     fi.metatavu.famifarm.persistence.model.Event event = eventController.findEventById(eventId);
     if (event == null) {
       return createNotFound(String.format("Could not find event %s", eventId));
@@ -1139,10 +1140,10 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response updatePackageSize(PackageSize body, UUID packageSizeId) {
+  public Response updatePackageSize(PackageSize body, Facility facility, UUID packageSizeId) {
     fi.metatavu.famifarm.persistence.model.PackageSize packageSize = packageSizeController
         .findPackageSize(packageSizeId);
-    if (packageSize == null) {
+    if (packageSize == null || packageSize.getFacility() != facility) {
       return createNotFound("Package size not found");
     }
 
@@ -1155,10 +1156,10 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response updatePerformedCultivationAction(PerformedCultivationAction body, UUID performedCultivationActionId) {
+  public Response updatePerformedCultivationAction(PerformedCultivationAction body, Facility facility, UUID performedCultivationActionId) {
     fi.metatavu.famifarm.persistence.model.PerformedCultivationAction performedCultivationAction = performedCultivationActionsController
         .findPerformedCultivationAction(performedCultivationActionId);
-    if (performedCultivationAction == null) {
+    if (performedCultivationAction == null || performedCultivationAction.getFacility() != facility) {
       return createNotFound(NOT_FOUND_MESSAGE);
     }
 
@@ -1173,15 +1174,15 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response updateProduct(Product body, UUID productId) {
+  public Response updateProduct(Product body, Facility facility, UUID productId) {
     fi.metatavu.famifarm.persistence.model.Product product = productController.findProduct(productId);
-    if (product == null) {
+    if (product == null || product.getFacility() != facility) {
       return createNotFound("Product not found");
     }
 
     List<fi.metatavu.famifarm.persistence.model.PackageSize> packageSizeList = new ArrayList<>();
     if (body.getDefaultPackageSizeIds() != null && !body.getDefaultPackageSizeIds().isEmpty()) {
-      packageSizeList = body.getDefaultPackageSizeIds().stream().map(id -> packageSizeController.findPackageSize(id)).collect(Collectors.toList());
+      packageSizeList = body.getDefaultPackageSizeIds().stream().map(id -> packageSizeController.findPackageSize(id)).filter(packageSize -> packageSize.getFacility() == facility).collect(Collectors.toList());
     }
 
     LocalizedEntry name = createLocalizedEntry(body.getName());
@@ -1213,7 +1214,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response updateProductionLine(ProductionLine body, UUID productionLineId) {
+  public Response updateProductionLine(ProductionLine body, Facility facility, UUID productionLineId) {
     fi.metatavu.famifarm.persistence.model.ProductionLine productionLine = productionLineController
         .findProductionLine(productionLineId);
     if (productionLine == null) {
@@ -1230,7 +1231,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response updateSeedBatch(SeedBatch body, UUID seedBatchId) {
+  public Response updateSeedBatch(SeedBatch body, Facility facility, UUID seedBatchId) {
     fi.metatavu.famifarm.persistence.model.SeedBatch seedBatch = seedBatchController.findSeedBatch(seedBatchId);
     if (seedBatch == null) {
       createNotFound(NOT_FOUND_MESSAGE);
@@ -1248,7 +1249,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response updateStorageDiscard(StorageDiscard payload, UUID storageDiscardId) {
+  public Response updateStorageDiscard(StorageDiscard payload, Facility facility, UUID storageDiscardId) {
     fi.metatavu.famifarm.persistence.model.StorageDiscard foundStorageDiscard = storageDiscardController.findById(storageDiscardId);
 
     if (foundStorageDiscard == null) {
@@ -1272,7 +1273,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response updateWastageReason(WastageReason body, UUID wastageReasonId) {
+  public Response updateWastageReason(WastageReason body, Facility facility, UUID wastageReasonId) {
     fi.metatavu.famifarm.persistence.model.WastageReason wastageReason = wastageReasonsController
         .findWastageReason(wastageReasonId);
     if (wastageReason == null) {
@@ -1288,7 +1289,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
-  public Response getReport(String typeParam, String fromTime, String toTime, String reportFormat) {
+  public Response getReport(Facility facility, String typeParam, String fromTime, String toTime, String reportFormat) {
     ReportType reportType = EnumUtils.getEnum(ReportType.class, typeParam);
 
     if (reportType == null) {
@@ -1317,7 +1318,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
     }
 
     try (ByteArrayOutputStream output = new ByteArrayOutputStream()) {
-      report.createReport(output, getLocale(), parameters);
+      report.createReport(output, facility, getLocale(), parameters);
       return streamResponse(output.toByteArray(), report.getContentType());
     } catch (ReportException e) {
       this.logger.error("Failed to create report", e);
@@ -1333,7 +1334,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
   @Override
-  public Response getStorageDiscard(UUID storageDiscardId) {
+  public Response getStorageDiscard(Facility facility, UUID storageDiscardId) {
 
     fi.metatavu.famifarm.persistence.model.StorageDiscard foundStorageDiscard = storageDiscardController.findById(storageDiscardId);
     if (foundStorageDiscard == null) {
@@ -1346,21 +1347,21 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
   @Transactional
-  public Response createDraft(Draft body) {
+  public Response createDraft(Draft body, Facility facility) {
     UUID creatorId = getLoggerUserId();
 
     //TODO: Add unique index to database to prevent duplicates created by ui errors
-    draftController.deleteDraftsByCreatorIdAndType(creatorId, body.getType());
+    draftController.deleteDraftsByCreatorIdAndType(creatorId, body.getType(), facility);
     return createOk(
-        draftTranslator.translateDraft(draftController.createDraft(body.getType(), body.getData(), creatorId)));
+        draftTranslator.translateDraft(draftController.createDraft(body.getType(), body.getData(), facility, creatorId)));
   }
 
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
   @Transactional
-  public Response deleteDraft(UUID draftId) {
+  public Response deleteDraft(Facility facility, UUID draftId) {
     fi.metatavu.famifarm.persistence.model.Draft draft = draftController.findDraftById(draftId);
-    if (draft == null) {
+    if (draft == null || draft.getFacility() != facility) {
       return createNotFound("Not found");
     }
 
@@ -1374,10 +1375,10 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER, Roles.WORKER })
-  public Response listDrafts(UUID userId, String type) {
-    fi.metatavu.famifarm.persistence.model.Draft draft = draftController.findDraftByCreatorIdAndType(userId, type);
+  public Response listDrafts(Facility facility, UUID userId, String type) {
+    fi.metatavu.famifarm.persistence.model.Draft draft = draftController.findDraftByCreatorIdAndType(userId, type, facility);
     if (draft != null) {
-      return createOk(Arrays.asList(draft));
+      return createOk(List.of(draft));
     }
 
     return createOk(Collections.emptyList());
@@ -1386,7 +1387,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response createPest(Pest body) {
+  public Response createPest(Pest body, Facility facility) {
     LocalizedEntry name = createLocalizedEntry(body.getName());
     UUID loggerUserId = getLoggerUserId();
 
@@ -1396,7 +1397,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response deletePest(UUID pestId) {
+  public Response deletePest(Facility facility, UUID pestId) {
     fi.metatavu.famifarm.persistence.model.Pest pest = pestsController.findPest(pestId);
     if (pest == null) {
       return createNotFound(NOT_FOUND_MESSAGE);
@@ -1409,7 +1410,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.WORKER, Roles.ADMIN, Roles.MANAGER })
-  public Response findPest(UUID pestId) {
+  public Response findPest(Facility facility, UUID pestId) {
     fi.metatavu.famifarm.persistence.model.Pest pest = pestsController.findPest(pestId);
     if (pest == null) {
       return createNotFound(NOT_FOUND_MESSAGE);
@@ -1420,7 +1421,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.WORKER, Roles.ADMIN, Roles.MANAGER })
-  public Response listPests(Integer firstResult, Integer maxResults) {
+  public Response listPests(Facility facility, Integer firstResult, Integer maxResults) {
     List<Pest> result = pestsController.listPests(firstResult, maxResults).stream().map(pestsTranslator::translatePest)
         .collect(Collectors.toList());
 
@@ -1429,7 +1430,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
 
   @Override
   @RolesAllowed({ Roles.WORKER, Roles.ADMIN, Roles.MANAGER })
-  public Response listPrinters() {
+  public Response listPrinters(Facility facility) {
     try {
       return createOk(printingController.getPrinters());
     } catch (Exception e) {
@@ -1441,7 +1442,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
   @Override
   @RolesAllowed({ Roles.ADMIN, Roles.MANAGER })
   @Transactional
-  public Response updatePest(Pest body, UUID pestId) {
+  public Response updatePest(Pest body, Facility facility, UUID pestId) {
     fi.metatavu.famifarm.persistence.model.Pest pest = pestsController.findPest(pestId);
     if (pest == null) {
       return createNotFound(NOT_FOUND_MESSAGE);
@@ -1477,10 +1478,11 @@ public class V1RESTService extends AbstractApi implements V1Api {
   /**
    * Creates new sowing event
    * 
-   * @param batch     batch
+   * @param product     product
    * @param startTime start time
    * @param endTime   end time
-   * @param eventData event data
+   * @param additionalInformation additional information
+   * @param eventDataObject event data
    * @return response
    */
   private Response createSowingEvent(fi.metatavu.famifarm.persistence.model.Product product, OffsetDateTime startTime,
@@ -1527,7 +1529,7 @@ public class V1RESTService extends AbstractApi implements V1Api {
    * Updates sowing event
    * 
    * @param event           event
-   * @param batch           batch
+   * @param product         product
    * @param startTime       start time
    * @param endTime         end time
    * @param eventDataObject event data object
